@@ -27,7 +27,7 @@ D/wmlscript////
 /install-sh/1.2/Fri Nov 11 16:58:36 2005//
 /missing/1.1/Fri Nov 11 16:58:35 2005//
 /mkinstalldirs/1.1/Fri Nov 11 16:58:32 2005//
-/ChangeLog/1.2745/Sun Mar  5 14:33:26 2006//
 /configure/1.158/Sun Mar  5 14:33:26 2006//
 /configure.in/1.163/Sun Mar  5 14:33:26 2006//
 /gw-config.h.in/1.18/Sun Mar  5 14:33:26 2006//
+/ChangeLog/1.2746/Sun Mar  5 14:37:11 2006//
